--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,50 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --card-width: 320px;
+}
+.light {
+    --headerBackgroundColor: #FFF;
+    --mainBackgroundColor: #E2E8F0;
+    --iconColor: #000;
+}
+.dark {
+    --headerBackgroundColor: #2B3743;
+    --mainBackgroundColor: #212C36;
+    --iconColor: #FFF;
+}
+html {
+    font-family: 'Nunito Sans', sans-serif;
+}
+body {
+    margin: 0;
+    padding: 10px;
+    min-height: 100%;
+    color: var(--iconColor);
+    background-color: var(--mainBackgroundColor);
+    transition: background 200ms ease-in-out, color 300ms ease-in-out;
+}
+button {
+    cursor: pointer;
+}
+h1, h2, h3, h4, p {
+    margin: 0;
+}
+.icon {
+    color: var(--iconColor);
+    width: 25px;
+    height: 25px;
+}
+
+/* COMPONENTS */
+
+app-stock, app-overview, app-mrdividend, app-splits, app-financials {
+    display: block;
+}
+app-mrdividend, app-financials, app-splits, app-financials {
+    padding: 20px 0;
+}
+app-overview {
+    padding: 0 0 20px 0;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
