--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0 0 0;
+  }
